# PP-Script

./: README.md  abstract_plugin.py  build_stub.py  computer_vision.py  core.py  detection_imports.py  event_system.py  http_listener.py  mem_reader.py  plugin.py  plugin_import.py  plugin_stub.pyi  pyproject.toml
detection/: computer_vision.py  http_listener.py  mem_reader.py  old_computer_vision.py  web_detection.py
docs/: computer-vision.md
pp_script/: core.py  plugin.py  plugin_import.py
pp_script/detection/: computer_vision.py  http.py  mem_reader.py  old_web_detection.py
src/: abstract_plugin.py  core.py  plugin_import.py
src/detection/: computer_vision.py  mem_reader.py  old_computer_vision.py  web_detection.py
